--- a/Sense_tagging.ipynb
+++ b/Sense_tagging.ipynb
@@ -221,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "He saw the balance beam.\n",
+      "He saw the laser beam.\n",
       "\n",
       "\n",
       "radio_beam.n.01: a signal transmitted along a narrow path; guides airplane pilots in darkness or bad weather\n",
