--- a/Sense_tagging.ipynb
+++ b/Sense_tagging.ipynb
@@ -200,10 +200,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "525858c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He saw a wooden bat.\n",
+      "\n",
+      "\n",
+      "bat.n.01: nocturnal mouselike mammal with forelimbs modified to form membranous wings and anatomical adaptations for echolocation by which they navigate\n",
+      "\n",
+      "bat.n.02: (baseball) a turn trying to get a hit\n",
+      "\n",
+      "squash_racket.n.01: a small racket with a long handle used for playing squash\n",
+      "\n",
+      "cricket_bat.n.01: the club used in playing cricket\n",
+      "\n",
+      "bat.n.05: a club used for hitting a ball in various games\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "tags = []\n",
     "\n",
@@ -227,6 +247,14 @@
     "    clear_output()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efed93bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
